docs/api/qiskit/0.33/qiskit.transpiler.passes.RemoveFinalMeasurements.mdx
---
title: RemoveFinalMeasurements (v0.33)
description: API reference for qiskit.transpiler.passes.RemoveFinalMeasurements in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.RemoveFinalMeasurements
---

# RemoveFinalMeasurements

<Class id="qiskit.transpiler.passes.RemoveFinalMeasurements" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/utils/remove_final_measurements.py" signature="RemoveFinalMeasurements(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Remove final measurements and barriers at the end of a circuit.

  This pass removes final barriers and final measurements, as well as all unused classical registers and bits they are connected to. Measurements and barriers are considered final if they are followed by no other operations (aside from other measurements or barriers.)

  Classical registers are removed iff they reference at least one bit that has become unused by the circuit as a result of the operation, and all of their other bits are also unused. Seperately, classical bits are removed iff they have become unused by the circuit as a result of the operation, or they appear in a removed classical register, but do not appear in a classical register that will remain.

  ## Methods

  <span id="qiskit-transpiler-passes-removefinalmeasurements-name" />

  ### name

  <Function id="qiskit.transpiler.passes.RemoveFinalMeasurements.name" signature="RemoveFinalMeasurements.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-removefinalmeasurements-run" />

  ### run

  <Function id="qiskit.transpiler.passes.RemoveFinalMeasurements.run" signature="RemoveFinalMeasurements.run(dag)">
    Run the RemoveFinalMeasurements pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveFinalMeasurements.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveFinalMeasurements.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

